--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=ws
 spring.datasource.generate-unique-name=false
 spring.jpa.properties.jakarta.persistence.validation.mode=none
+spring.web.locale=en
