--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,16 @@
 spring.application.name=ws
 spring.datasource.generate-unique-name=false
-spring.jpa.properties.jakarta.persistence.validation.mode=none
-spring.web.locale=en
+spring.messages.basename=ValidationMessages,messages
+hoaxify.email.username=lemuel.sanford@ethereal.email
+hoaxify.email.password=	TcuehZjUkBZwrcpb6u
+hoaxify.email.host=smtp.ethereal.email
+hoaxify.email.port=587
+hoaxify.email.from=noreply@hoaxify.com
+hoaxify.client.host=http://localhost:5173
+spring.profiles.active=dev,production
+#---
+spring.config.activate.on-profile=production
+hoaxify.client.host=http://hoaxify.com
+#---
+spring.config.activate.on-profile=dev
+hoaxify.client.host=http://dev-hoaxify.com
