8. commit => hesap aktifleştirme işlemleri yapıldı

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,9 @@ hoaxify.email.host=smtp.ethereal.email
 hoaxify.email.port=587
 hoaxify.email.from=noreply@hoaxify.com
 hoaxify.client.host=http://localhost:5173
-spring.profiles.active=dev,production
+spring.profiles.active=dev
 #---
 spring.config.activate.on-profile=production
 hoaxify.client.host=http://hoaxify.com
 #---
 spring.config.activate.on-profile=dev
-hoaxify.client.host=http://dev-hoaxify.com
